--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Created using Storyline 3 - http://www.articulate.com  -->
     <!-- version: 3.11.23355.0 -->
 
-    <title>Lina E-Modul untuk Penelitian (Fix)</title>
+    <title>Lina E-Modul untuk Penelitian</title>
     <style>
         body {
             background: #ffffff;
