--- a/story_html5.html
+++ b/story_html5.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <!-- Created using Storyline 3 - http://www.articulate.com  -->
   <!-- version: 3.11.23355.0 -->
-  <title>Lina E-Modul untuk Penelitian (Fix)</title>
+  <title>Lina E-Modul untuk Penelitian</title>
   <meta http-equiv="x-ua-compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, shrink-to-fit=no, minimal-ui" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
