--- a/story_flash.html
+++ b/story_flash.html
@@ -3,7 +3,7 @@
 <head>
 <!-- Created using Storyline 3 - http://www.articulate.com  -->
 <!-- version: 3.11.23355.0 -->
-<title>Lina E-Modul untuk Penelitian (Fix)</title>
+<title>E-Modul Pembelajaran IPA SMP/MTs</title>
 <meta http-equiv="x-ua-compatible" content="IE=edge" />
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 
